text overflow: fixed npm script added to start app background added in speed icons spped control icons visible on mouse move and stays visible for 2 seconds

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,9 @@ html, body, .container{
     font-size: 0;
     z-index: 2;
 }
+.options{
+    display: none;
+}
 .back-btn{
     height: 100%;
     padding: 20px;
@@ -47,6 +50,8 @@ html, body, .container{
     color: #e3e3e3;
     line-height: 60px;
     padding-left: 16px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .mediaListing{
     width: 300px;
@@ -131,13 +136,15 @@ html, body, .container{
     padding: 5px;
     width: 40px;
     cursor: pointer;
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 4px;
 }
 .forward{
 
 }
 .backward{
     transform: rotateZ(180deg);
-    margin-right: 15px;
+    margin-right: 8px;
 }
 .play-pause{
 
